--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <li class="submenu__item">
                             <div class="submenu__head submenu__head_icon">Офферы</div>
                             <ul class="submenu">
-                                <li class="submenu__item submenu__item_sub js-tab-trigger" data-tab="3">Форм факторы</li>
+                                <li class="submenu__item submenu__item_sub submenu__item_sub_first js-tab-trigger" data-tab="3">Форм факторы</li>
                                 <li class="submenu__item submenu__item_sub submenu__item_last js-tab-trigger" data-tab="4">Ниши и возрастные ограничения</li>
                             </ul>
                         </li>
