--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
                                                 <img src="images/video4.jpg" alt="" class="video__image">
                                                 <div class="video__info">
                                                     <h3 class="video__title">Lucky-center “Арбитраж трафика”</h3>
-                                                    <p class="video__text"><a href="https://luckycenter.ekvio.ru/395/lp/1575-kursy/9313-bazovyy-kurs-po-arbitrazhu-trafika" class="link" target="_blank">luckycenter.ekvio.ru/395/lp/1575-kurcy...</a></p>
+                                                    <p class="video__text"><a href="https://lucky-center.com/395/lp/1575-kursy/9313-bazovyy-kurs-po-arbitrazhu-trafika" class="link" target="_blank">lucky-center.com/395/lp/1575-kurcy...</a></p>
                                                     <p class="video__text">Логин: <span class="link">2yyegorguu7@list.ru</span></p>
                                                     <p class="video__text">Пароль: qypfoj-sYtpyn-7kajha</p>
                                                 </div>
@@ -581,7 +581,7 @@
                                                 <img src="images/video4.jpg" alt="" class="video__image">
                                                 <div class="video__info">
                                                     <h3 class="video__title">Lucky-center “Тех.основы в арбитраже”</h3>
-                                                    <p class="video__text"><a href="https://luckycenter.ekvio.ru/395/lp/1575-kursy/8393-kurs-po-tekhnicheskim-osnovam-v-arbitrazhe" class="link" target="_blank">luckycenter.ekvio.ru/395/lp/1575-kurcy...</a></p>
+                                                    <p class="video__text"><a href="https://lucky-center.com/395/lp/1575-kursy/8393-kurs-po-tekhnicheskim-osnovam-v-arbitrazhe" class="link" target="_blank">lucky-center.com/395/lp/1575-kurcy...</a></p>
                                                     <p class="video__text">Логин: <span class="link">2yyegorguu7@list.ru</span></p>
                                                     <p class="video__text">Пароль: qypfoj-sYtpyn-7kajha</p>
                                                 </div> 
